--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
     "homepage":"https://github.com/nfteasypay/nftpay",
     "type": "library",
     "require": {
-        "php": ">=7.0.0",
-        "curl/curl": ">7.19"
+        "php": ">=7.0.0"
     },
     "autoload": {
         "psr-4": {
